--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,21 @@
 hs_err_pid
 replay_pid*
 
+# IntelliJ
+target
+out/
+target
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
+2.2.1. spring_hibernate\target
+2.2.1. spring_hibernate\*
+!2.2.1. spring_hibernate\pom.xml
+!2.2.1. spring_hibernate\src
+!README.md
+
 # Maven
 target/
 pom.xml.tag
@@ -28,14 +43,6 @@ build/
 .gradletasknamecache
 gradle-app.setting
 !gradle-wrapper.jar
-
-# IntelliJ
-out/
-.idea/
-.idea_modules/
-*.iml
-*.ipr
-*.iws
 
 # OS X
 .DS_Store
