--- a/.gitignore
+++ b/.gitignore
@@ -9,18 +9,15 @@ hs_err_pid
 replay_pid*
 
 # IntelliJ
-target
 out/
-target
 .idea/
 .idea_modules/
 *.iml
 *.ipr
 *.iws
-2.2.1. spring_hibernate\target
-2.2.1. spring_hibernate\*
-!2.2.1. spring_hibernate\pom.xml
-!2.2.1. spring_hibernate\src
+*
+!pom.xml
+!src
 !README.md
 
 # Maven
